--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site
 name: "Zoo Near Me"
-title_suffix: ""
-title: ""
-description: ""
-meta_description: ""
-logo: ''
+title_suffix: "Zoo Near Me | Online Guides To The Best Zoos In The US State-By-State"
+title: "Online Guides To The Best Zoos In The US State-By-State"
+description: "Online Guides To The Best Zoos In The US State-By-State"
+meta_description: "Online Guides To The Best Zoos In The US State-By-State"
+logo: "/assets/images/zoonearme.png"
 favicon: "/assets/images/favicon.ico"
 baseurl: "https://krussll.github.io/zoonearme"
 permalink: /:title
